name:                mbtiles
version:             0.1.0.0
synopsis:            Haskell MBTiles client
description:         Reads MBTiles files.
homepage:            https://github.com/caneroj1/mbtiles#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2017 Joe Canero
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Database.Mbtiles.Query
                     , Database.Mbtiles.Utility
  exposed-modules:     Database.Mbtiles
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple
                     , bytestring
                     , mtl
  default-language:    Haskell2010

executable mbtiles-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mbtiles
  default-language:    Haskell2010

test-suite mbtiles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mbtiles
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/mbtiles
